# calsync

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260512_01_initial_schema.py  20260514_01_provider_onboarding.py
docs/: ops.md
docs/prompts/: backend.md
docs/superpowers/plans/: 2026-05-12-calsync-phase-1-foundation.md  2026-05-13-calsync-phase-2-google-oauth.md  2026-05-13-calsync-provider-onboarding-ui.md  2026-05-14-calsync-public-url-google-flightboard.md
docs/superpowers/specs/: 2026-05-12-calsync-phase-1-foundation-design.md  2026-05-13-calsync-phase-2-google-oauth-design.md  2026-05-13-calsync-provider-onboarding-ui-design.md  2026-05-14-calsync-public-url-google-flightboard-design.md
src/calsync/: cli.py  config.py  crypto.py  db.py  logging.py  main.py  worker.py
src/calsync/models/: __init__.py  admin.py  app_state.py  events.py  provider_configurations.py  providers.py  publishing.py
src/calsync/repos/: __init__.py  events.py  provider_config.py  providers.py  publishing.py  state.py  (+1 more)
tests/: test_auth_login.py  test_cli_resets.py  test_dashboard_pages.py  test_docs.py  test_event_normalization.py  test_flightboard.py  test_google_oauth_routes.py  test_google_provider.py  test_health_smoke.py  test_icloud_provider.py  test_ics_publishing.py  test_mfa.py  test_mock_provider.py  test_password_policy.py  test_provider_onboarding_routes.py  test_provider_settings.py  test_recovery_codes.py  test_setup_flow.py  test_url_generation.py  test_worker_config.py
(+40 files in other folders)
