[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calsync"
version = "0.1.0"
description = "Calendar synchronization service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.1",
    "passlib[argon2]>=1.7.4",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "cryptography>=43.0.3",
    "icalendar>=5.0.12",
    "python-multipart>=0.0.17",
    "typer>=0.12.5",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "beautifulsoup4>=4.12.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
